--- a/1-ServerClub/ServerDll/ServerPlugin.ini
+++ b/1-ServerClub/ServerDll/ServerPlugin.ini
@@ -1,8 +1,70 @@
 [ServerPluginInfo]
-LicenseId = 2
-ServerDllPort = 55998
+LicenseId = 0
+ServerPort = 55998
+ServerName = Server Club Hard
+ClientSerial = X-TeamDevelopers
+ClientVersion = 1.00.00
 CheckCRC = 1
+HackSwitch = 0
+A_VersionId = 4
+A_Camera3D = 1
+A_AntiLag = 1
+A_CustomICO = 1
+A_RemoveSplash = 1
+A_TwoFactorAuth = 1
+A_Emoji = 1
+A_CustomMoster = 1
+A_GuildIco = 1
+A_PetSafeZone = 1
+A_CustomNPC = 1
+A_CustomCloak = 1
+A_CustomOption = 1
+A_CustomEventTime = 1
+A_DataServer = 2
 
-[DataServerInfo]
-CheckSQL = 1
-DataServerODBC = MuOnline
+[DataServerConfig]
+DS_1_Enabled = 1
+DS_2_Enabled = 1
+DS_1_Port = 55860
+DS_2_Port = 55760
+GS_1_Ports = 55900,55919
+GS_2_Ports = 55920,55939
+PortNumberAddress = 0x0
+
+[ConfigFuncKeys]
+Func1 = 25
+Func2 = 26
+Func3 = 1
+Func4 = 7
+Func5 = 13
+Func6 = 19
+Func7 = 2
+Func8 = 8
+Func9 = 14
+Func10 = 20
+Func11 = 15 
+Func12 = 21
+Func13 = 3
+Func14 = 9
+Func15 = 5
+Func16 = 27
+
+[WindowNameCustom]
+ActiveWindowName = 0
+ActiveWindowClock = 0
+ActiveWindowWebSite = 0
+WindowWebSite = www.muserver.club
+
+[ConfigCustomS6]
+PetSafeZoneHorse = 0
+PetSafeZoneDinorant = 0
+PetSafeZoneFenrir = 0
+DownS6 = 0
+CustomFog = 0
+SmokeEffect = 0
+KeyEventTime = 82
+ActiveNameServer = 0
+Name1Server = Custom1Name
+Name2Server = Custom2Name
+Name3Server = Custom3Name
+Name4Server = Custom4Name
